# SomeKV-AEP

./: CMakeLists.txt  build.sh  compile.out  test.sh
inc/: interface.h
src/: CMakeLists.txt  NetworkIO.cpp  NetworkIO.h  interface.cpp  interface.h  schema.h
src/io/: common.h  pmem_file.h  readable_file.h  writable_file.h  writeable_file.h
src/parallel_hashmap/: phmap.h
src/storage/: disk_storage.h  distk_storage.h  memory_storage.h  memtable.h  pmem_storage.h  schema.h  storage_engine.h  storage_engine_factory.h  storage_engine_p2p.h
src/utils/: asio.hpp  common.h  network_io.h  schema.h
test/: CMakeLists.txt  test_main.cpp
